Added some text at end

--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -153,12 +153,11 @@ Our results show that there is little advantage from a carbon or primary product
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
 %dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
-This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
+This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{}. In this study we evaluated only the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability CITES. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
 
-%emwNov8: Need to add that we have A LOT more information now from this study to guide future research ... (1) we need to be careful on what species we look at (so NDVI as Zohner uses, will schmeer across this and make understanding it mechanistically harder), (2) we need to figure out what mechanistically controls this [GOOD spot to introduce whether it might be leaf longeivity and also talk about budset vs. other late season events ... though it would be good if we can discuss budset and what it means vs. leaf coloring etc. earlier too]
- This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see(mckown2014, Vander2016). Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rhode2011}. Further, most work on budset in broadleaf species comes from one genus (Populus spp.) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. 
- 
-Of course, budset is just one of many ways that plants senescence each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs (I don't have a ref for this but am sure someone has said it). Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical
+Our results highlight that linking the phenological growing season to primary productivity requires accounting for phenological variation at multiple scales---from the individual to species levels. More efforts to understand and model species-level shifts in phenology appear especially necessary. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023,marques2023acclimation}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see (mckown2014, Vander2016). Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rhode2011}. Further, most work on budset in broadleaf species comes from one genus (Populus spp.) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. Budset is just one of many ways that plants senescence each year---generally at different times for different events \citep{Michelson2018}. 
+
+Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{Korner2023}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity and lifespan have examined this over large gradients \citep{reich2003,borchert2005phenology}, but there is surprisingly little work examining responses \citep{roleksyn2020fingerprint,en2021ethylene} and almost none across different metrics of end of season. Layering onto this the complexity of how species may balance leaf longevity versus building new leaves seems a critical gap in current research, but one that theory, models and global studies have routinely highlighted \citep{reich2003,fujita2012annual,kikuzawa2006toward}. Taken together, our results suggest a new research agenda for studies of growing season length with climate change that leverages satellite data for trends, but builds on new ground-level observational studies across species and time. 
  
  
 \section{Methods} %emwNov4 -- Skipping!
